<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <artifactId>gui</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>11</source>
          <target>11</target>
        </configuration>
        <executions>
          <execution>
            <phase>compile</phase>
          </execution>
        </executions>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <artifactId>javafx-maven-plugin</artifactId>
        <configuration>
          <mainClass>tech.hiddenproject.compaj.gui.Compaj</mainClass>
        </configuration>
        <executions>
          <execution>
            <id>default-cli</id>
          </execution>
        </executions>
        <groupId>org.openjfx</groupId>
        <version>0.0.6</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>lang-extensions</artifactId>
      <groupId>tech.hiddenproject.compaj</groupId>
      <scope>compile</scope>
      <version>${lang-extensions.version}</version>
    </dependency>
    <dependency>
        <groupId>com.github.therapi</groupId>
        <artifactId>therapi-runtime-javadoc-scribe</artifactId>
        <version>0.15.0</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
        <groupId>com.github.therapi</groupId>
        <artifactId>therapi-runtime-javadoc</artifactId>
        <version>0.15.0</version>
    </dependency>
    <dependency>
      <artifactId>javafx-controls</artifactId>
      <classifier>${default.classifier}</classifier>
      <groupId>org.openjfx</groupId>
      <version>${javafx.version}</version>
    </dependency>
    <dependency>
      <artifactId>lang</artifactId>
      <groupId>tech.hiddenproject.compaj</groupId>
      <version>${lang.version}</version>
    </dependency>
    <dependency>
      <artifactId>fxribbon</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>org.openjfx</groupId>
        </exclusion>
      </exclusions>
      <groupId>com.pixelduke</groupId>
      <version>${fxribbon.version}</version>
    </dependency>
    <dependency>
      <artifactId>jmetro</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>org.openjfx</groupId>
        </exclusion>
      </exclusions>
      <groupId>org.jfxtras</groupId>
      <version>${jmetro.version}</version>
    </dependency>
    <dependency>
      <artifactId>formsfx-core</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>org.openjfx</groupId>
        </exclusion>
      </exclusions>
      <groupId>com.dlsc.formsfx</groupId>
      <version>${formsfx.version}</version>
    </dependency>
    <dependency>
      <artifactId>ikonli-javafx</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>org.openjfx</groupId>
        </exclusion>
      </exclusions>
      <groupId>org.kordamp.ikonli</groupId>
      <version>${ikonli.version}</version>
    </dependency>
    <dependency>
      <artifactId>richtextfx</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>org.openjfx</groupId>
        </exclusion>
      </exclusions>
      <groupId>org.fxmisc.richtext</groupId>
      <version>${richtextfx.version}</version>
    </dependency>
    <dependency>
      <artifactId>ikonli-carbonicons-pack</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>*</artifactId>
          <groupId>org.openjfx</groupId>
        </exclusion>
      </exclusions>
      <groupId>org.kordamp.ikonli</groupId>
      <version>${carbonicons.version}</version>
    </dependency>
    <dependency>
      <artifactId>timeseries-forecast</artifactId>
      <groupId>com.workday</groupId>
      <version>${timeseries.version}</version>
    </dependency>
  </dependencies>
  <groupId>tech.hiddenproject.compaj</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>CompaJ</name>
  <parent>
    <artifactId>compaj</artifactId>
    <groupId>tech.hiddenproject</groupId>
    <version>${revision}</version>
  </parent>
  <profiles>
    <profile>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <id>Mac</id>
      <properties>
        <default.classifier>mac</default.classifier>
      </properties>
    </profile>
    <profile>
      <id>Win</id>
      <properties>
        <default.classifier>win</default.classifier>
        <jpackager.path>tools/jdk.packager-windows/jpackager.exe</jpackager.path>
      </properties>
    </profile>
    <profile>
      <id>Linux</id>
      <properties>
        <default.classifier>linux</default.classifier>
        <jpackager.path>tools/jdk.packager-linux/jpackager</jpackager.path>
      </properties>
    </profile>
    <profile>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-shade-plugin</artifactId>
            <executions>
              <execution>
                <configuration>
                  <outputFile>target\CompaJ.jar</outputFile>
                  <shadedArtifactAttached>true</shadedArtifactAttached>
                  <transformers>
                    <transformer implementation=
                      "org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                      <mainClass>tech.hiddenproject.compaj.gui.Main</mainClass>
                    </transformer>
                    <transformer
                      implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                  </transformers>
                </configuration>
                <goals>
                  <goal>shade</goal>
                </goals>
                <phase>package</phase>
              </execution>
            </executions>
            <groupId>org.apache.maven.plugins</groupId>
            <version>3.2.0</version>
          </plugin>
        </plugins>
      </build>
      <id>Universal Jar</id>
    </profile>
    <profile>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-jar-plugin</artifactId>
            <configuration>
              <outputDirectory>${project.build.directory}/libs</outputDirectory>
            </configuration>
          </plugin>
          <plugin>
            <artifactId>maven-dependency-plugin</artifactId>
            <executions>
              <execution>
                <configuration>
                  <excludeGroupIds>org.openjfx</excludeGroupIds>
                  <includeScope>runtime</includeScope>
                  <outputDirectory>${project.build.directory}/libs</outputDirectory>
                </configuration>
                <goals>
                  <goal>copy-dependencies</goal>
                </goals>
                <id>copy-libs</id>
                <phase>prepare-package</phase>
              </execution>
              <execution>
                <configuration>
                  <classifier>${default.classifier}</classifier>
                  <includeGroupIds>org.openjfx</includeGroupIds>
                  <includeScope>runtime</includeScope>
                  <outputDirectory>${project.build.directory}/mods</outputDirectory>
                </configuration>
                <goals>
                  <goal>copy-dependencies</goal>
                </goals>
                <id>copy-modules</id>
                <phase>prepare-package</phase>
              </execution>
            </executions>
            <version>3.3.0</version>
          </plugin>
          <!-- jpackage -->
          <plugin>
            <artifactId>exec-maven-plugin</artifactId>
            <executions>
              <execution>
                <configuration>
                  <arguments>
                    <!-- packager arguments -->
                    <argument>create-image</argument>
                    <argument>--verbose</argument>
                    <argument>--echo-mode</argument>
                    <argument>--input</argument>
                    <argument>${project.build.directory}/libs</argument>
                    <argument>--class</argument>
                    <argument>tech.hiddenproject.compaj.gui.Main</argument>
                    <argument>--main-jar</argument>
                    <argument>./gui-${gui.version}.jar</argument>
                    <argument>--output</argument>
                    <argument>package</argument>
                    <argument>--identifier</argument>
                    <argument>tech.hiddenproject.compaj.gui</argument>
                    <argument>--name</argument>
                    <argument>${project.name}</argument>

                    <!-- jlink arguments -->
                    <argument>--module-path</argument>
                    <argument>${java.home}/jmods:${project.build.directory}/mods</argument>
                    <argument>--add-modules</argument>
                    <argument>
                      java.base,java.sql,java.scripting,java.logging,java.desktop,java.xml,jdk.unsupported,javafx.base,
                      javafx.graphics,javafx.controls,org.kordamp.ikonli.carbonicons
                    </argument>
                    <argument>--strip-native-commands</argument>
                  </arguments>
                  <environmentVariables>
                    <JAVA_HOME>${java.home}</JAVA_HOME>
                  </environmentVariables>
                  <executable>${jpackager.path}</executable> <!-- fix for https://github.com/mojohaus/exec-maven-plugin/issues/75 -->
                  <longModulepath>false
                  </longModulepath>
                  <workingDirectory>${project.build.directory}</workingDirectory>
                </configuration>
                <goals>
                  <goal>exec</goal>
                </goals>
                <id>create-package</id>
                <phase>package</phase>
              </execution>
            </executions>
            <groupId>org.codehaus.mojo</groupId>
            <version>3.0.0</version>
          </plugin>
        </plugins>
      </build>
      <id>Native image</id>
    </profile>
  </profiles>
  <properties>
    <carbonicons.version>12.3.1</carbonicons.version>
    <default.classifier>mac</default.classifier>
    <formsfx.version>11.3.2</formsfx.version>
    <fxribbon.version>1.2.2</fxribbon.version>
    <ikonli.version>12.3.1</ikonli.version>
    <javafx.version>17.0.1</javafx.version>
    <jmetro.version>11.6.14</jmetro.version>
    <jpackager.path>${project.basedir}/tools/jdk.packager-osx/jpackager</jpackager.path>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <richtextfx.version>0.10.9</richtextfx.version>
    <timeseries.version>1.1.1</timeseries.version>
  </properties>
  <version>${gui.version}</version>
</project>
